Update routes for Update user password
